# wxops

./: .gitignore  CLAUDE.md  LICENSE  README.md  assessment-report-v3.html  assessment-report.html  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: migration-advisor.md  wxc-calling-builder.md
.claude/rules/: cleanup.md  cucm-migration.md  org-health.md
.github/workflows/: ci.yml  transferability.yml
aap-demo/: .gitignore  package-lock.json  package.json
aap-demo/scripts/: generate-narration.mjs
aap-demo/src/: Main.tsx  Player.tsx  Root.tsx
docs/: CLAUDE.md  pipeline-visual.html  webex-api-feedback-for-cisco-collab-bu.md  webex-api-feedback.html
docs/architecture/: 00-index.md  01-structural-map.md  02-decisions.md  03-behavior.md  (+2 more)
mock/: multi-tier-call-flow.md
specs/: tts-spec.json  webex-admin.json  webex-contact-center.json  webex-device.json  webex-flow-store.json  webex-meetings.json  webex-messaging.json  webex-ucm.json
tests/: conftest.py  live_test_v2.py  test_auth.py  test_cleanup.py  test_cli_smoke.py  test_command_renderer.py  test_config.py  test_config_org.py  test_field_overrides.py  test_generate_commands.py  test_openapi_parser.py  test_org_id_injection.py  test_output.py  test_partner_e2e.py  test_smoke.sh
tools/: CLAUDE.md  build_benchmark_fixture.py  build_oncall_deck.py  command_renderer.py  create_stress_test_db.py  expand_cucm_data.py  field_overrides.yaml  generate_commands.py  layer3_benchmark.py  openapi_parser.py  postman_parser.py  postman_spec_diff.py  update-specs.py  webhook_receiver.py
(+789 files in other folders)
