[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wxcli"
dynamic = ["version"]
description = "Webex Calling CLI — terminal-based provisioning for Webex APIs"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
wxcli = "wxcli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/wxcli/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "live: requires live Webex API access (deselect with '-m not live')",
]
